template subheader created

--- a/TEMPLATES/Landscape text animation/index.html
+++ b/TEMPLATES/Landscape text animation/index.html
@@ -26,8 +26,52 @@
                 
             </svg>
             </div>
-    </header>
-    
+             
+     </header>
+  
+
+     <section>
+      <div class="subHeader">
+        <h2>SECTION1</h2>
+      </div>
+
+      <div class="section-content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      </div>
+   </section>
+
+
+   <section>
+    <div class="subHeader">
+      <h2>SECTION2</h2>
+    </div>
+
+    <div class="section-content">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quae fugit et sint eligendi quam quaerat. Debitis alias odit quae, minus, reiciendis a obcaecati, ducimus fugit in veniam recusandae similique!</p>
+    </div>
+ </section>
+
+
     <script src="./js/app.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
