--- a/TEMPLATES/Landscape text animation/css/main.css
+++ b/TEMPLATES/Landscape text animation/css/main.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
 body{
     margin: 0;
     padding: 0;
+    background-color: rgb(13, 14, 14);
+    color: rgb(185, 180, 180);
 }
 
 header{
@@ -23,6 +27,21 @@ header::before{
     background: linear-gradient(0deg, rgba(193,149,37,0.6404761733795081) 0%, rgba(193,149,37,0) 100%); 
 }
 
+.subHeader{
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    background: rgba(65, 64, 64, 0.753);
+    background: linear-gradient(150deg, rgba(13, 14, 14, 0.64) 10%, rgba(193,149,37,0) 100%);
+    position: sticky;
+    top: 0;
+}
+
+.subHeader h2{
+    margin-top: 1rem;
+    font-family: 'Itim', cursive;
+}
 
 /* SVG ANIMATION*/
 
